...
        android:queryHint='Search for...'
        app:layout_constraintEnd_toStartOf="@+id/filter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchPageTitle" />

    <Button
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/go"
...
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchFor" />

    <LinearLayout
        android:id="@+id/Navigation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/nav_bar_background"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/homeButton"
            android:layout_width="39dip"
            android:layout_height="37dip"
            android:layout_marginEnd="60dip"
            android:background="@drawable/ic_home"
            android:backgroundTint="@color/colorButtonsLightMode"
            android:scaleType="fitCenter"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/searchButton2"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:layout_marginEnd="60dip"
            android:layout_weight="0"
            android:background="@drawable/ic_search_black_24dp"
            android:backgroundTint="@color/colorPrimaryDark"
...
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/popular_subjects"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/popularSearchesView"
        app:layout_constraintStart_toStartOf="parent" />

    <HorizontalScrollView
        android:id="@+id/popularSearchesView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="50dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/Navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recentSearchesView">

        <LinearLayout
            android:id="@+id/popularSearches"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:focusable="true"
            android:focusableInTouchMode="true">
            <requestFocus/>
...
        app:layout_constraintBottom_toTopOf="@+id/popularSearchesView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search">

        <LinearLayout
            android:id="@+id/recentSearches"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" />
    </HorizontalScrollView>

    <Button
...
