...
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/savedCourses"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="1dp"
        android:animateLayoutChanges="false"
        app:layout_constraintBottom_toTopOf="@+id/Navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsLabel"
        tools:ignore="InvalidId">

        <LinearLayout
            android:id="@+id/savedCourseView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
...
